# LegalAssistant

kg/: .env.example  error_log.txt  extract_json.py  graph_fragments.json  pyproject.toml  queries.py  script.py
